--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -8,6 +8,18 @@ group = 'com.firstline'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+buildscript {
+	repositories {
+		mavenCentral()
+	}
+}
+
+tasks{
+	bootJar {
+		launchScript()
+	}
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
