--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-mysql.driver-class-name=com.mysql.cj.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/example?useUnicode=true&useSSL=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-mysql.username=root
-mysql.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://192.168.70.202:5432/wba
+spring.datasource.username=wba
+spring.datasource.password=wba_password
