--- a/hadoop/requirements.txt
+++ b/hadoop/requirements.txt
@@ -1,12 +1,9 @@
-joblib==0.16.0
 numpy==1.19.0
 pandas==1.0.5
 patsy==0.5.1
+psycopg2==2.8.5
 python-dateutil==2.8.1
 pytz==2020.1
-scikit-learn==0.23.1
 scipy==1.5.1
 six==1.15.0
-sklearn==0.0
 statsmodels==0.11.1
-threadpoolctl==2.1.0
